[project]
name = "potholes-ni"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.0",
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "polars>=1.32.3",
    "pyproj>=3.7.2",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "xmltodict>=0.14.2",
]
